Keep recommendation responses compact by default
Amp-Thread-ID: https://ampcode.com/threads/T-01a106c0-9c1a-71bd-bc4c-ee62426f122c
